--- a/Starter_Code/Deep_Learning_Attempt_2.ipynb
+++ b/Starter_Code/Deep_Learning_Attempt_2.ipynb
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1271,15 +1271,15 @@
    ],
    "source": [
     "# Export our model to HDF5 file\n",
-    "nn.save(\"AlphabetSoupCharity.h5\")"
+    "nn.save(\"AlphabetSoupCharity_2.h5\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1291,12 +1291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
